public abstract class nvccCompilador {
}
