public class nvccTesla extends nvccCompilador{
    public nvccTesla() {
        super();
        System.out.println("Compilador nvccCompilador para Tesla");
    }
}
