public class nvprofFermi extends nvprofProfiler{
    public nvprofFermi() {
        super();
        System.out.println("Profiler nvprofFermi para Fermi.");
    }
}
