public class nvprofPascal extends nvprofProfiler {
    public nvprofPascal() {
        super();
        System.out.println("Profiler nvprofPascal para Pascal.");
    }
}
