public abstract class nvprofProfiler {

}
