public class nvvmPascal extends nvvmMonTool{
    public nvvmPascal() {
        super();
        System.out.println("Herramienta de monitoreo nvvmPascal para Pascal");
    }
}
